# justrs

./: .gitignore  Cargo.toml  README.md  input.txt  input.txt.backup  justfile  justfile_template.just
src/: execute_shell_command.rs  lib.rs  main.rs
tests/: simple_integration_tests.rs  test_execute_shell_command.rs
