[package]
name = "justrs"
version = "0.1.4"
edition = "2024"
rust-version = "1.91"
authors = ["GYoung <ytok1108@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoungHaKim7/justrs"
documentation = "https://docs.rs/justrs"
description = """
input.txt You can change the justfile I want. It's for Rust only.
"""
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
keywords = ["justfile"]

[dependencies]

[dev-dependencies]
tempfile = "3.8"
